appId: com.example.basic_demo.dev
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "home.user.card"
    timeout: 10000
- assertVisible:
    id: "home.user.name"
- assertVisible: "Name: John Doe"
- assertVisible:
    id: "home.user.email"
- assertVisible: "Email: john.doe@example.com"
- assertVisible: "Steps: 0"
- tapOn:
    id: "home.counter.increment"
- extendedWaitUntil:
    visible: "Steps: 1"
    timeout: 10000
- tapOn:
    id: "home.counter.decrement"
- extendedWaitUntil:
    visible: "Steps: 0"
    timeout: 10000
- tapOn:
    id: "home.counter.reset"
- extendedWaitUntil:
    visible: "Steps: 0"
    timeout: 10000
